--- a/code/C#SmsProject/SmsUI/SmsUI/Student/ViewStudent.xaml
+++ b/code/C#SmsProject/SmsUI/SmsUI/Student/ViewStudent.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             DataContext="{Binding RelativeSource={RelativeSource Self}}"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Style="{DynamicResource usrecntrl}">
 
@@ -15,19 +16,19 @@
     </UserControl.Resources>
     <DockPanel>
         <UniformGrid>
-            <ListView Name="passView" HorizontalAlignment="Stretch">
+            <ListView Name="passView" HorizontalAlignment="Stretch" ItemsSource="{Binding allstudentCollection}" Loaded="Window_Loaded">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Width="100" Header="Student ID"   />
-                        <GridViewColumn Width="100" Header="Name" />
-                        <GridViewColumn Width="150" Header="Guardian Name"  />
-                        <GridViewColumn Width="150" Header="Address"   />
-                        <GridViewColumn Width="300" Header="Phone Number"   />
-                        <GridViewColumn Width="100" Header="Date of Birth"   />
-                        <GridViewColumn Width="100" Header="Blood Group"   />
-                        <GridViewColumn Width="100" Header="Join Class" />
-                        <GridViewColumn Width="150" Header="School From"  />
-                        <GridViewColumn Width="150" Header="Join date"   />
+                        <GridViewColumn Width="100" Header="Student ID" DisplayMemberBinding="{Binding id}"  />
+                        <GridViewColumn Width="100" Header="Name" DisplayMemberBinding="{Binding name}"/>
+                        <GridViewColumn Width="150" Header="Guardian Name" DisplayMemberBinding="{Binding gurdain}" />
+                        <GridViewColumn Width="150" Header="Address"  DisplayMemberBinding="{Binding address}" />
+                        <GridViewColumn Width="300" Header="Phone Number"  DisplayMemberBinding="{Binding phone}" />
+                        <GridViewColumn Width="100" Header="Date of Birth" DisplayMemberBinding="{Binding dob}"  />
+                        <GridViewColumn Width="100" Header="Blood Group"  DisplayMemberBinding="{Binding blodGroup}" />
+                        <GridViewColumn Width="100" Header="Join Class" DisplayMemberBinding="{Binding joinClass}"/>
+                        <GridViewColumn Width="150" Header="School From"  DisplayMemberBinding="{Binding schoolFrom}"/>
+                        <GridViewColumn Width="150" Header="Join date" DisplayMemberBinding="{Binding joinDate}"  />
                         
                     </GridView>
                 </ListView.View>
