--- a/code/C#SmsProject/SmsUI/SmsUI/TakeAttendance.xaml
+++ b/code/C#SmsProject/SmsUI/SmsUI/TakeAttendance.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Style="{DynamicResource usrecntrl}">
 
@@ -26,28 +27,17 @@
                     <ComboBoxItem>Mrs.</ComboBoxItem>
                     <ComboBoxItem>Ms.</ComboBoxItem>
                 </ComboBox>-->
-                <Label  Style="{StaticResource labelStyle}">Student Name</Label>
+                <Label Style="{StaticResource labelStyle}">Today</Label>
+                <DatePicker  Name="dobDatepicker" SelectedDate="{x:Static sys:DateTime.Now}" Style="{StaticResource datePickerStyle}"></DatePicker>
+                <Label  Style="{StaticResource labelStyle}">Student's Name</Label>
                 <TextBox  Name="studentNameTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
 
-                <Label Style="{StaticResource labelStyle}">Guardian Name</Label>
-                <TextBox  Name="GuardianNameTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-                <Label Style="{StaticResource labelStyle}">Address</Label>
-                <TextBox  Name="addressTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-                <Label Style="{StaticResource labelStyle}">Phone Number</Label>
-                <TextBox  Name="phoneNoTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-                <Label Style="{StaticResource labelStyle}">Date of Birth</Label>
-                <DatePicker  Name="dobDatepicker" Style="{StaticResource datePickerStyle}"></DatePicker>
-                <Label Style="{StaticResource labelStyle}">Blood Group</Label>
-                <TextBox  Name="bloodGroupTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
 
-
-
-                <Label Style="{StaticResource labelStyle}">Join Class</Label>
+                <Label Style="{StaticResource labelStyle}">Class</Label>
                 <TextBox  Name="joinClassTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-                <Label Style="{StaticResource labelStyle}">School From</Label>
-                <TextBox  Name="schoolFromTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-                <Label  Style="{StaticResource labelStyle}">Join date</Label>
-                <DatePicker Name="joinDatePicker" Style="{StaticResource datePickerStyle}"></DatePicker>
+
+                <Label Style="{StaticResource labelStyle}">Sign in Time</Label>
+                <TextBox  Name="signintimeTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
             </UniformGrid>
         </DockPanel>
     </ScrollViewer>
