added manage student, teacher, admission form etc. with delete student and teacher

--- a/code/C#SmsProject/SmsUI/SmsUI/Admission/AdmissionForm.xaml
+++ b/code/C#SmsProject/SmsUI/SmsUI/Admission/AdmissionForm.xaml
@@ -16,7 +16,7 @@
         <UniformGrid DockPanel.Dock="top" Rows="1">
             <Button Style="{StaticResource MainBtnStyle}" Name="viewFormBtn" Click="viewFormBtn_Click">View Form</Button>
             <Button Style="{StaticResource MainBtnStyle}" Name="addAdmissionFormBtn" Click="addAdmissionFormBtn_Click">Add Admission Form</Button>
-            <Button Style="{StaticResource MainBtnStyle}" Name="manageFormBtn">Manage Form</Button>
+            <Button Style="{StaticResource MainBtnStyle}" Name="manageFormBtn" Click="manageFormBtn_Click">Manage Form</Button>
         </UniformGrid>
         <UniformGrid Name="AdmissionMainUG"></UniformGrid>
     </DockPanel>
