--- a/code/C#SmsProject/SmsUI/SmsUI/Attendance.xaml
+++ b/code/C#SmsProject/SmsUI/SmsUI/Attendance.xaml
@@ -14,10 +14,9 @@
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <UniformGrid DockPanel.Dock="top" Rows="1">
-            <Button Style="{StaticResource MainBtnStyle}" Name="takeStudentAttendanceBtn" Click="takeAttendanceBtn_Click">Student</Button>
-            <Button Style="{StaticResource MainBtnStyle}">Student Attendance</Button>
-            <Button Style="{StaticResource MainBtnStyle}" Name="takeTeacherAttendanceBtn" Click="takeAttendanceBtn_Click">Teacher</Button>
-            <Button Style="{StaticResource MainBtnStyle}">Teacher Attendance</Button>
+            
+            <Button Style="{StaticResource MainBtnStyle}" Name="takeAttendanceBtn" Click="takeAttendanceBtn_Click">Teacher</Button>
+            <Button Name="viewAttendanceBtn" Style="{StaticResource MainBtnStyle}" Click="viewAttendanceBtn_Click">View Attendance</Button>
         </UniformGrid>
         <UniformGrid Name="attendanceUG"></UniformGrid>
     </DockPanel>
