--- a/code/C#SmsProject/SmsUI/SmsUI/TakeAttendance.xaml
+++ b/code/C#SmsProject/SmsUI/SmsUI/TakeAttendance.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="MmmUI.TakeAttendance"
+﻿<UserControl x:Class="SMSUI.TakeAttendance"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Style="{DynamicResource usrecntrl}">
+             d:DesignHeight="500" d:DesignWidth="300" Style="{DynamicResource usrecntrl}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -17,8 +17,10 @@
     <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <DockPanel LastChildFill="True">
             <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-                <Button Style="{StaticResource MainBtnStyle}" Name="resetStudentInfoBtn">Reset</Button>
-                <Button Style="{StaticResource MainBtnStyle}" Name="studentInfoSubmitBtn" >Submit</Button>
+                <Button Name="studentAtndnce" Style="{StaticResource MainBtnStyle}" Click="studentAtndnce_Click">For Student</Button>
+                <Button Name="teacherAtndnce" Style="{StaticResource MainBtnStyle}" Click="teacherAtndnce_Click">For Teacher</Button>
+                <Button Style="{StaticResource MainBtnStyle}" Name="resetAtdncBtn">Reset</Button>
+                <Button Style="{StaticResource MainBtnStyle}" Name="atdncSubmitBtn" Click="atdncSubmitBtn_Click">Submit</Button>
             </UniformGrid>
             <UniformGrid Columns="2" DockPanel.Dock="Top">
                 <!--<Label  Style="{StaticResource labelStyle}">Title</Label>
@@ -28,16 +30,20 @@
                     <ComboBoxItem>Ms.</ComboBoxItem>
                 </ComboBox>-->
                 <Label Style="{StaticResource labelStyle}">Today</Label>
-                <DatePicker  Name="dobDatepicker" SelectedDate="{x:Static sys:DateTime.Now}" Style="{StaticResource datePickerStyle}"></DatePicker>
-                <Label  Style="{StaticResource labelStyle}">Student's Name</Label>
-                <TextBox  Name="studentNameTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
+                <DatePicker  Name="atnddateDatepicker" SelectedDate="{x:Static sys:DateTime.Now}" Style="{StaticResource datePickerStyle}"></DatePicker>
+                <Label Name="studentLBL" Style="{StaticResource labelStyle}">Student</Label>
+                <Label Name="teacherLBL" Style="{StaticResource labelStyle}" Visibility="Collapsed">Teacher</Label>
+                <ComboBox Name="atdntforStudentCombobox" Style="{StaticResource comboboxStyle}" IsEditable="True" SelectedIndex="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" />
+                <ComboBox Name="atdntforTeacherCombobox" IsEditable="True" Style="{StaticResource comboboxStyle}" SelectedIndex="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Visibility="Collapsed" />
 
+                <Label Name="classLBl" Style="{StaticResource labelStyle}">Class</Label>
+                <TextBox Name="ClassTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
 
-                <Label Style="{StaticResource labelStyle}">Class</Label>
-                <TextBox  Name="joinClassTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
-
-                <Label Style="{StaticResource labelStyle}">Sign in Time</Label>
-                <TextBox  Name="signintimeTxtbox"  Style="{StaticResource textboxStyle}"></TextBox>
+                <Label Style="{StaticResource labelStyle}">Present</Label>
+                <ComboBox Name="presentCB" SelectedIndex="0" Style="{StaticResource comboboxStyle}">
+                    <ComboBoxItem>Yes</ComboBoxItem>
+                    <ComboBoxItem>No</ComboBoxItem>
+                </ComboBox>
             </UniformGrid>
         </DockPanel>
     </ScrollViewer>
